Closed Bug 42345 Opened 25 years ago Closed 25 years ago

Window position no longer remembered on exit (localstore problem)

Categories

(Core :: XUL, defect, P3)

x86
Linux
defect

Tracking

()

RESOLVED FIXED

People

(Reporter: 1212mozilla, Assigned: bryner)

References

Details

(Keywords: regression, Whiteboard: [nsbeta2-][nsbeta3+])

With the most recent build, when I exit mozilla and restart it, the upper left hand corner of the browser window is positioned in the very center of my screen. If I delete the localstore.rdf file from my profile directory, the window is placed in the upper left hand corner of my screen. Once I close mozilla and restart it, a new localstore.rdf is created and the window is back in the incorrect place. I have deleted everything from my profile with the execption of the cookies, bookmarks, and preferences. However, I have edited the prefs.js file and removed everything except the proxy info, homepage info, download directory, and a few other properties that I would rather not lose. Even with such a minimal profile this problem persists.
The problem seems to be when the localstore file gets written. No matter where the window is when I exit localstore gets something like: <RDF:Description about="chrome://navigator/content/navigator.xul#main-window"> <screenX>510</screenX> <screenY>388</screenY> <width>856</width> <height>744</height> </RDF:Description> If I change the screen x and y the window gets put in the right place the next time I start.
hmm,over to XPToolkit for a look. Pav, is this something you can fix.
Assignee: asa → trudelle
Status: UNCONFIRMED → NEW
Component: Browser-General → XP Toolkit/Widgets
Ever confirmed: true
QA Contact: doronr → jrgm
this happens only on Linux, right? assigning to pavlov, m21
Assignee: trudelle → pavlov
Target Milestone: --- → M21
This is *NOT* a Linux only bug. I just installed the latest nightly build on my windows computer and set the proxy to junkbuster. It exibits the same behavior. From default home page of www.mozilla.org, mozilla would not load www.cnn.com or www.sluggy.com properly. Both came up looking like mozilla.org. However, the problem seems more pronounced on linux as after loading a local file windows seems to breeze through my sluggy test case with no problems. I haven't done enough browsing (read 5 minutes) under windows to know sites where it can be reproduced reliably. I have tested the following configs of junkbuster and mozilla: jbuster | mozilla --------+-------- windows | linux linux | linux linux | windows All exhibit the behavior.
Sorry, had the wrong bug in mind. Please ignore that last comment.
Nominating for beta2. If we don't fix this, windows will appear at all sorts of strange locations.
Keywords: nsbeta2
This actually broke with blizzard's checkin, although to properly fix it we need to be sending NS_MOVE events for window moves as well.
Depends on: 43095
Stephen, so it is Linux-only? cc'ing blizzard for comment
Keywords: regression
This is indeed linux-only. We have a good lead on the cause.
Just wanted to add a comment that this is causing, in some cases, the browser window to open almost completely offscreen. This is why it needs fixed for beta2.
This is linux only as far as I have seen. I was confused and posted to the wrong bug about not being linux only.
Putting on [nsbeta2+] radar for beta2 fix.
Whiteboard: [nsbeta2+]
Target Milestone: M21 → M18
This will be fixed once we hook up NS_MOVE events on linux. I'm working with blizzard on that.
Moving from [nsbeta2+] to [nsbeta2-] per todays PDT XP Toolkit Beta2 Review mtg.
Keywords: nsbeta3, relnote2
Whiteboard: [nsbeta2+] → [nsbeta2-]
bryner has either fixed this or has a fix for this.. reassigning to him
Assignee: pavlov → bryner
Status: NEW → ASSIGNED
nsbeta3+
Whiteboard: [nsbeta2-] → [nsbeta2-][nsbeta3+]
Checked in this fix, finally (been in my tree for at least a month).
Status: ASSIGNED → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
*** Bug 43743 has been marked as a duplicate of this bug. ***
My original fix here had some problems. I'm going to check in a better one when the tree opens.
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
Ok, should be "really fixed" now.
Status: REOPENED → RESOLVED
Closed: 25 years ago25 years ago
Resolution: --- → FIXED
verified fix using 20001101 window open at top left corner
You need to log in before you can comment on or make changes to this bug.