Fixing bug 42345 - hook up NS_MOVE events when a toplevel window is moved on Linux.  Also use get_root_origin instead of get_origin so that we persist the correct position.  r=blizzard.