widget/src/gtk/nsGtkEventHandler.h
@@ -29,7 +29,7 @@
 
 class nsIWidget;
 
-gint handle_configure_event(GtkWidget *w, GdkEventConfigure *conf, gpointer p);
+gboolean handle_configure_event(GtkWidget *w, GdkEventConfigure *conf, gpointer p);
 void handle_size_allocate(GtkWidget *w, GtkAllocation *alloc, gpointer p);
 gint handle_expose_event(GtkWidget *w, GdkEventExpose *event, gpointer p);
 
